--- a/NguyenVanChinh_Lab456/Content/Site.css
+++ b/NguyenVanChinh_Lab456/Content/Site.css
@@ -9,6 +9,8 @@
     padding-right: 15px;
 }
 
+
+
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
@@ -16,9 +18,18 @@
     white-space: normal;
 }
 
+.navbar-inverse {
+    background-color: #195e83;
+    border-color: #fbf6f6;
+}
+
+.navbar-inverse .navbar-nav > li > a { color: white; }
+
+.navbar-inverse .navbar-brand { color: white; }
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
 textarea {
     max-width: 280px;
 }
+
