--- a/NguyenVanChinh_Lab456/Views/Courses/Create.cshtml
+++ b/NguyenVanChinh_Lab456/Views/Courses/Create.cshtml
@@ -7,6 +7,7 @@
 <h2>Create</h2>
 @using (Html.BeginForm("Create", "Courses"))
 {
+    @Html.AntiForgeryToken()
     <form>
         <div class="form-group">
             @Html.LabelFor(m => m.Place)
@@ -30,6 +31,11 @@
             @Html.ValidationMessageFor(m => m.Category)
         </div>
         <button type="submit" value="Save" class="btn btn-primary">Save</button>
+        
+        @section scripts
+        {
+            @Scripts.Render("~/bundles/jqueryval");
+        }
         <div class="form-group"></div>
         <div class="form-group"></div>
     </form>
