--- a/NguyenVanChinh_Lab456/Views/Home/Index.cshtml
+++ b/NguyenVanChinh_Lab456/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                 
                 <div class="details">
                     <span class="lecturer">
-                        @course.LecturedId
+                        @course.Lecturer.Name
                     </span>
                     <span class="category">
                         @course.Category.Name
