--- a/NguyenVanChinh_Lab456/Views/Home/Index.cshtml
+++ b/NguyenVanChinh_Lab456/Views/Home/Index.cshtml
@@ -21,12 +21,45 @@
                 <div class="details">
                     <span class="lecturer">
                         @course.Lecturer.Name
+                        <button class="btn btn-default btn-sm js-toggle-follow" data-user-id="@course.LecturedId">Follow</button>
                     </span>
                     <span class="category">
                         @course.Category.Name
-                    </span>
+                    </span> 
+                    <button data-course-id="@course.Id" class="btn btn-default btn-sm js-toggle-attendance">Going?</button>
                 </div>
             </li>
         }
     </ul>
+    @section scripts
+    {
+        <script>
+            $(document).ready(function() {
+                $(".js-toggle-attendance").click(function(e) {
+                    var button = $(e.target);
+                    $.post("/api/attendances", { coursedId: button.attr("data-course-id") })
+                        .done(function() {
+                            button
+                                .removeClass("btn-default")
+                                .addClass("btn-info")
+                                .text("Going");
+                        })
+                        .fail(function() {
+                            alert("Something failed");
+                        });
+                });
+                $(".js-toggle-follow").click(function (e) {
+                    var button = $(e.target);
+                    $.post("/api/followings", { followeeId: button.attr("data-course-id") })
+                        .done(function () {
+                            button.text("Following");
+                        })
+                        .fail(function () {
+                            alert("Something failed");
+                        });
+                });
+
+            });
+        </script>
+    }
 </div>
