--- a/NguyenVanChinh_Lab456/Views/Shared/_LoginPartial.cshtml
+++ b/NguyenVanChinh_Lab456/Views/Shared/_LoginPartial.cshtml
@@ -14,7 +14,10 @@
 
                 <ul class="dropdown-menu">
                     <li>
-                        <a href="#">Course I'm Going </a>
+                        <a href="#">My Upcoming Courses </a>
+                    </li>
+                    <li>
+                        <a href="@Url.Action("Attending", "Courses")">Course I'm Going </a>
                     </li>
                     <li>
                         <a href="#">Lecture I'm Flowing </a>
