--- a/NguyenVanChinh_Lab456/Views/Courses/Mine.cshtml
+++ b/NguyenVanChinh_Lab456/Views/Courses/Mine.cshtml
@@ -38,14 +38,15 @@
 @section scripts{
     <script>
         $(document).ready(function() {
-            $(".js-toggle-course").click(function(e) {
+            $(".js-cancel-course").click(function(e) {
                 e.preventDefault();
                 var link = $(e.target);
-                bootbox.confirm("Are you sure to cancel?",
-                    function() {
+
+                var result = window.confirm("Are you sure to cancel?");
+                    if(result) {
                         $.ajax({
-                                url: "/Api/courses" + link.attr("data-course-id"),
-                                method: "Delete"
+                                url: "/api/courses/" + link.attr("data-course-id"),
+                                method: "DELETE"
                             })
                             .done(function() {
                                 link.parents("li").fadeOut(function() {
@@ -53,10 +54,10 @@
                                 });
                             })
                             .fail(function () {
-                                alert("Something failed");
+                                alert("Something failed!");
                             });
 
-                    });
+                    };
             });
         });
     </script>
