--- a/NguyenVanChinh_Lab456/Views/Home/Index.cshtml
+++ b/NguyenVanChinh_Lab456/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
             $(document).ready(function () {
                 $(".js-toggle-attendance").click(function (e) {
                     var button = $(e.target);
-                    $.post("/api/attendances", { coursedId: button.attr("data-course-id") })
+                    $.post("api/attendances", { coursedId: button.attr("data-course-id") })
                         .done(function () {
                             button
                                 .removeClass("btn-default")
@@ -58,7 +58,7 @@
                 });
                 $(".js-toggle-follow").click(function (e) {
                     var button = $(e.target);
-                    $.post("/api/followings", { followeeId: button.attr("data-course-id") })
+                    $.post("api/followings", { followeeId: button.attr("data-user-id") })
                         .done(function () {
                             button.text("Following");
                         })
