--- a/NguyenVanChinh_Lab456/Views/Home/Index.cshtml
+++ b/NguyenVanChinh_Lab456/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
                     </span>
                     @if (Model.ShowAction)
                     {
-                        <button data-course-id="@course.Id" class="btn btn-default btn-sm js-toggle-attendance">Going?</button>
+                        <button  class="btn btn-default btn-sm js-toggle-attendance" data-course-id="@course.Id">Going?</button>
                     }
 
                 </div>
@@ -45,15 +45,15 @@
             $(document).ready(function () {
                 $(".js-toggle-attendance").click(function (e) {
                     var button = $(e.target);
-                    $.post("api/attendances", { coursedId: button.attr("data-course-id") })
+                    $.post("api/attendances", { coursedId: button.attr("") })
                         .done(function () {
                             button
                                 .removeClass("btn-default")
                                 .addClass("btn-info")
-                                .text("Going");
+                                .text("Going-ahq");
                         })
-                        .fail(function () {
-                            alert("Something failed");
+                        .fail(function (xhr) {
+                            alert(xhr.responseText);
                         });
                 });
                 $(".js-toggle-follow").click(function (e) {
@@ -62,8 +62,8 @@
                         .done(function () {
                             button.text("Following");
                         })
-                        .fail(function () {
-                            alert("Something failed");
+                        .fail(function (xhr) {
+                            alert(xhr.responseText);
                         });
                 });
 
