--- a/NguyenVanChinh_Lab456/Views/Home/Index.cshtml
+++ b/NguyenVanChinh_Lab456/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
                     </span>
                     @if (Model.ShowAction)
                     {
-                        <button  class="btn btn-default btn-sm js-toggle-attendance" data-course-id="@course.Id">Going?</button>
+                        <button data-course-id="@course.Id"  class="btn btn-default btn-sm js-toggle-attendance" >Going?</button>
                     }
 
                 </div>
@@ -45,7 +45,7 @@
             $(document).ready(function () {
                 $(".js-toggle-attendance").click(function (e) {
                     var button = $(e.target);
-                    $.post("api/attendances", { coursedId: button.attr("") })
+                    $.post("api/attendances", { coursedId: button.attr("data-course-id") })
                         .done(function () {
                             button
                                 .removeClass("btn-default")
